css/home.css
@font-face {
    font-family: 'Poppins';
    src: url('/webfonts/Poppins/Poppins-Bold.ttf') format('truetype');
    font-family: 'Poppins-Regular';
    src: url('/webfonts/Poppins/Poppins-Regular.ttf') format('truetype');
}

body {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.top-background {
    background-image: url('/images/top-bg-mobile.svg');
}

.bottom-background {
    background-image: url('/images/bottom-bg-mobile.svg');
}

.ph-mobile {
    display: block;
}

.ph-desktop {
    display: none;
}

.top-background, .bottom-background {
    background-size: cover;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-bottom: 45px;
    width: 100%;
}

.menu {
    display: flex;
    justify-content: center;
}

.hero {
    padding-top: 25px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.copy-and-resume-content {
    display: flex;
    flex-direction: column;
    align-items: center;
}

h1, h2, h3, p {
    font-family: "Poppins-Regular", sans-serif;
    text-align: center;
}

h1, h2 {
    font-size: 20px;
}

.logo, .name .resume-button-container {
    padding-top: 25px;
}

.description {
    padding-top: 35px;
    padding-bottom: 35px;
}

.resume-button {
    width: 250px;
    height: 78px;
    border: 3px solid #00161E;
    background: transparent;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.fa-download, .resume-button {
    font-family: "Poppins-Bold", sans-serif;
    font-weight: 600;
    font-size: 16px;
    color: #00161E;
}

.selectables {
    margin-top: 25px;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.selectable {
    background-color: white;
    border: 2px solid #00161E;
    width: 155px;
    height: 155px;
    margin: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
}

.fab {
    font-size: 3.5em;
}

.lead {
    background-color: #00161E;
    color: white;
}

.projects-header {
    padding-top: 50px;
}

.project {
    background-color: white;
    border: 2px solid #00161E;
    height: 541px;
    width: 334px;
    margin-top: 25px;
    margin-bottom: 25px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    padding-left: 25px;
    padding-right: 25px;
}

.about-description {
    text-align: left;
    font-size: 15px;
}

.project-image {
    object-fit: cover;
    width: 280px;
    height: 175px;
}

.project-options {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.project-opts {
    width: 133px;
    height: 53px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.use {
    border: 2px solid #00161E;
}

.code {
    margin-left: 10px;
    border: 2px solid #EA7528;
}

.footer {
    height: 318px;
    width: 100%;
    background-color: #00161E;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.logo-container {
    display: flex;
    justify-content: center;
}

.menu-icon, .footer-icon {
    font-size: 20px;
    padding: 5px;
}

.menu-icon, .footer-icon, .signature {
    color: white;
}

.secret-menu-container {
    background: black;
    width: 100%;
    position: sticky;
    top: 0;
}

.menu {
    list-style: none;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 10px;
}

.menu-icon {
    color: white;
}

@media (min-width: 925px) {

    .menu-desktop {
        padding: 25px;
    }

    .logo {
        padding-top: 0px;
    }

    .top-background {
        background-image: url('/images/top-bg.svg');
        border: none;
    }

    .bottom-background {
        background-image: url('/images/bottom-bg.svg');
        border: none;
    }

    .hero {
        flex-direction: row;
        justify-content: space-between;
        max-width: 1280px;
    }

    .name, .profession, .description, .resume-button-container {
        width: 75%;
        text-align: left;
    }

    .selectables {
        margin-top: 0px;
    }

    .ph-mobile {
        display: none;
    }

    .ph-desktop {
        display: block;
    }

    .selectables {
        max-width: 500px;
    }

    .project {
        width: 977px;
        height: 336px;
        flex-direction: row;
    }

    .project-image {
        width: 300px;
        height: 275px;
    }

    .project-about {
        padding-left: 20px;
        padding-right: 20px;
        width: 50%;
    }

    .about-description {
        font-size: 15px;
    }

    .desktop-container{
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        height: 180px;
        width: 50%;
    }

    .project-options {
        display: flex;
        flex-direction: column;
    }

    .code {
        margin-left: 0;
        margin-top: 10px;
    }
}

